--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 appdirs==1.4.3
-click==6.7
-Flask==0.12.2
+#click==6.7
+#Flask==0.12.2
 Flask-SQLAlchemy==2.2
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
+#itsdangerous==0.24
+#Jinja2==2.9.6
+#MarkupSafe==1.0
 mysqlclient==1.3.10
 packaging==16.8
 pyparsing==2.2.0
-six==1.10.0
+#six==1.10.0
 SQLAlchemy==1.1.10
-Werkzeug==0.12.2
+#Werkzeug==0.12.2
 #sudo apt-get install python-mysqldb
 #sudo apt-get install mysql-server
 #sudo apt-get install python-dev
 #sudo apt-get install default-libmysqlclient-dev
+Click==7.0
+Flask==1.0.2
+Flask-SocketIO==3.3.2
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+python-engineio==3.5.1
+python-socketio==3.1.2
+six==1.12.0
+Werkzeug==0.15.2
